--- a/style.css
+++ b/style.css
@@ -112,11 +112,11 @@ nav .fa{
 
 }
 /*----------- Acitivities ------*/
-.Activity{
+.training{
   width: 80%;
   margin: auto;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 h1{
   font-size: 36px;
@@ -129,10 +129,29 @@ p{
   line-height: 22px;
   padding: 10px;
 }
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.training-col{
+  flex-basis: 31%;
+  background: #87d2c0;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.2s;
+}
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.training-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 
-
-
-
+}
 
 
 
