--- a/style.css
+++ b/style.css
@@ -157,10 +157,51 @@ h3{
     flex-direction: column;
   }
 }
-
-
-
-
+/*-------FSC----*/
+.FSC{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+.FSC-col{
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.FSC-col img{
+  width: 100%;
+  display: block;
+}
+.layer{
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+.layer:hover{
+  background: rgba(103, 207, 158, 0.9);
+}
+.layer h3{
+  width: 100%;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0);
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  transition: 0.5s;
+}
+.layer:hover h3{
+  color: #fff;
+  bottom: 40%;
+}
 
 
 
