--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7),rgba(4, 9, 30, 0.7)),
-  url(SeSC/Finance-1.jpg);
+  url(SeSC/green-building.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -112,7 +112,7 @@ nav .fa{
   }
 
 }
-/*----------- Acitivities ------*/
+/*-----------Training------*/
 .training{
   width: 80%;
   margin: auto;
@@ -137,7 +137,7 @@ p{
 }
 .training-col{
   flex-basis: 31%;
-  background: rgba(103, 207, 158, 0.9);
+  background:#4be690;
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 20px 12px;
@@ -160,15 +160,20 @@ h3{
 }
 /*-------FSC----*/
 .FSC{
-  width: 80%;
+  width: 100%;
   margin: auto;
   text-align: center;
   padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: rgba(72, 230, 159, 0.9);
+  background-size: cover;
 }
 .FSC-col{
+  width: 80%;
   flex-basis: 32%;
   border-radius: 10px;
   margin-bottom: 30px;
+  margin-left: 10%;
   position: relative;
   overflow: hidden;
 }
@@ -253,7 +258,7 @@ h3{
   width: 100%;
   text-align: center;
   padding: 30px 0;
-  background-color: rgba(2, 59, 30, 0.7);
+  background-color: rgba(20, 92, 34, 0.906);
 }
 .footer h4{
   margin-bottom: 25px;
