--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ p{
 }
 .training-col{
   flex-basis: 31%;
-  background:#4be690;
+  background: #58cf8e;
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 20px 12px;
@@ -165,7 +165,7 @@ h3{
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: rgba(72, 230, 159, 0.9);
+  background-color: #36ac6b;
   background-size: cover;
 }
 .FSC-col{
@@ -221,11 +221,15 @@ h3{
   margin-bottom: 5%;
   text-align: left;
 }
+.department-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
 .department-col img{
   width: 100%;
   border-radius: 10px;
   display: block;
 }
+
 .department-col h3{
   font-weight: 400;
   margin-top: 16px;
@@ -258,7 +262,7 @@ h3{
   width: 100%;
   text-align: center;
   padding: 30px 0;
-  background-color: rgba(20, 92, 34, 0.906);
+  background-color: rgba(15, 16, 15, 0.906);
 }
 .footer h4{
   margin-bottom: 25px;
@@ -278,6 +282,77 @@ h3{
 .fa{
   color: #03a54c;
 }
+
+/*-----------About Us Page--------*/
+.sub-header{
+  height: 50vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(SeSC/green-building.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: beige;
+}
+.sub-header h1{
+  margin-bottom: 200px;
+}
+.about-us{
+  width: 80%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+.about-col{
+  flex-basis: 48%;
+  padding: 30px 2px;
+}
+.about-col img{
+  width: 100%;
+}
+.about-col h1{
+  padding-top: 0;
+}
+.about-col p{
+  padding: 15px 0 25px;
+  font-weight: 100;
+  color:rgb(73, 73, 73)
+}
+.green-btn{
+  border: 1px solid #23854f;
+  background: transparent;
+  color:#23854f;
+}
+.green-btn:hover{
+  color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
