--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ h3{
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: #36ac6b;
+  background-color:rgb(239, 255, 245);
   background-size: cover;
 }
 .FSC-col{
