--- a/style.css
+++ b/style.css
@@ -110,14 +110,13 @@ nav .fa{
     font-size: 22px;
     cursor: pointer;
   }
-
 }
 /*-----------Training------*/
 .training{
   width: 80%;
-  margin: auto;
   text-align: center;
   padding-top: 80px;
+  margin: auto;
 }
 h1{
   font-size: 36px;
@@ -137,7 +136,7 @@ p{
 }
 .training-col{
   flex-basis: 31%;
-  background: #58cf8e;
+  background: rgb(199, 255, 221);
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 20px 12px;
@@ -151,7 +150,6 @@ h3{
 }
 .training-col:hover{
   box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-
 }
 @media(max-width: 700px){
   .row{
@@ -165,7 +163,6 @@ h3{
   text-align: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color:rgb(239, 255, 245);
   background-size: cover;
 }
 .FSC-col{
@@ -220,6 +217,7 @@ h3{
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
+  transition: 0.2s;
 }
 .department-col:hover{
   box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
@@ -242,7 +240,6 @@ h3{
   width: 80%;
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(SeSC/books.jpg);
   background-position: center;
-  background-size: cover;
   border-radius: 10px;
   text-align: center;
   padding: 100px 0;
@@ -308,6 +305,11 @@ h3{
 }
 .about-col img{
   width: 100%;
+  border-radius: 2%;
+  transition: 0.2s;
+}
+.about-col img:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
 .about-col h1{
   padding-top: 0;
@@ -315,7 +317,7 @@ h3{
 .about-col p{
   padding: 15px 0 25px;
   font-weight: 100;
-  color:rgb(73, 73, 73)
+  color:rgb(128,128,128);
 }
 .green-btn{
   border: 1px solid #23854f;
@@ -325,19 +327,78 @@ h3{
 .green-btn:hover{
   color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*--------Blog--------*/
+.blog-content{
+  width: 80%;
+  margin: auto;
+  padding: 60px 0;
+}
+.blog-left{
+  flex-basis: 65%;
+}
+.blog-left img{
+  width: 100%;
+}
+.blog-left h2{
+  color: #222;
+  font-weight: 600;
+  margin: 30px 0;
+}
+.blog-left p{
+  padding: 0;
+  color: rgb(128, 128, 128);
+}
+.blog-right{
+  flex-basis: 32%;
+}
+.blog-right h3{
+  background:#23854f;
+  color: #fff;
+  padding: 7px 0;
+  font-size: 16px;
+  margin-bottom: 20px;
+  transition: 0.2s;
+}
+.blog-right h3:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+.blog-right div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #555;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.comment-box{
+  border: 1px solid rgb(128,128,128);
+  margin: 50px 0;
+  padding: 10px 20px;
+}
+.comment-box h3{
+  text-align: left;
+  font-weight: 600;
+}
+.comment-form input, .comment-form textarea{
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background:rgb(241, 241, 241);
+}
+.comment-form button{
+  margin: 15px 0;
+}
+@media(max-width:700px){
+  .sub-header h1{
+    font-size: 40px;
+  }
+  .header h1{
+    font-size: 40px;
+  }
+}
 
 
 
