--- a/style.css
+++ b/style.css
@@ -2,15 +2,23 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }  
-.header{
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7),rgba(4, 9, 30, 0.7)),
-  url(SeSC/green-building.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color:black;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
 }
 nav{
   display: flex;
@@ -21,14 +29,29 @@ nav{
 nav img{
   width: 150px;
 }
+.header{
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7),rgba(4, 9, 30, 0.7)),
+  url(SeSC/green-building.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
 .nav-links{
-  flex: 1;
+  flex: 2;
+  padding: 0 2%;
+  display: inline;
+}
+.nav-links ul{
+  padding-left: 1cm;
+  padding-top: 0cm;
   text-align: right;
-  padding: 0% 2%;
+  padding-right: 1cm;
 }
 .nav-links ul li{
   list-style: none;
-  display: inline-block;
+  display:inline-block;
   padding: 20px 20px;
   position: relative;
 }
@@ -93,7 +116,7 @@ nav .fa{
     font-size: 12px;
   }
   .nav-links{
-    position: absolute;
+    position: fixed;
     background:#03a54c;
     height: 100vh;
     width: 150px;
@@ -118,17 +141,6 @@ nav .fa{
   padding-top: 80px;
   margin: auto;
 }
-h1{
-  font-size: 36px;
-  font-weight: 600;
-}
-p{
-  color:black;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 22px;
-  padding: 10px;
-}
 .row{
   margin-top: 5%;
   display: flex;
@@ -142,11 +154,6 @@ p{
   padding: 20px 12px;
   box-sizing: border-box;
   transition: 0.2s;
-}
-h3{
-  text-align: center;
-  font-weight: 600;
-  margin: 10px 0;
 }
 .training-col:hover{
   box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
@@ -322,7 +329,7 @@ h3{
 .about-col p{
   padding: 15px 0 25px;
   font-weight: 100;
-  color:rgb(128,128,128);
+  color:rgb(75, 75, 75);
 }
 .green-btn{
   border: 1px solid #23854f;
@@ -352,7 +359,7 @@ h3{
 }
 .blog-left p{
   padding: 0;
-  color: rgb(128, 128, 128);
+  color: rgb(75, 75, 75);
 }
 .blog-right{
   flex-basis: 32%;
