--- a/style.css
+++ b/style.css
@@ -469,9 +469,20 @@ nav .fa{
     margin-left: 10%;
   }
 }
-
-
-
+/*-------Preloader----------*/
+#preloader{
+  background: rgb(255, 255, 255) url(SeSC/preloader.gif) no-repeat center center;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+/*-------Dark theme----------*/
+#dark-theme{
+  width: 30px;
+  cursor: pointer;
+  position: absolute;
+}
 
 
 
