--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@ nav img{
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7),rgba(4, 9, 30, 0.7)),
-  url(/SeSC/green-building.jpg);
+  url(../SeSC/green-building.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -249,7 +249,7 @@ nav .fa{
 .cta{
   margin: 100px auto;
   width: 80%;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(/SeSC/books.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(../SeSC/books.jpg);
   background-position: center;
   border-radius: 10px;
   text-align: center;
@@ -295,7 +295,7 @@ nav .fa{
 .sub-header{
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(/SeSC/green-building.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(../SeSC/green-building.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -470,7 +470,7 @@ nav .fa{
 }
 /*-------Preloader----------*/
 #preloader{
-  background: rgb(255, 255, 255) url(/SeSC/preloader.gif) no-repeat center center;
+  background: rgb(255, 255, 255) url(../SeSC/preloader.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
