--- a/style/home/style.css
+++ b/style/home/style.css
@@ -1,122 +1,122 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
-}  
-h1{
+}
+h1 {
   font-size: 36px;
   font-weight: 600;
 }
-p{
-  color:black;
+p {
+  color: black;
   font-size: 14px;
   font-weight: 300;
   line-height: 22px;
   padding: 10px;
 }
-h3{
+h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
 }
-nav{
+nav {
   display: flex;
   padding: 0% 1%;
   justify-content: space-between;
   align-items: center;
 }
-nav img{
+nav img {
   width: 150px;
 }
-.header{
+.header {
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7),rgba(4, 9, 30, 0.7)),
-  url(../SeSC/green-building.jpg);
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(/SeSC/green-building.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
 }
-.nav-links{
+.nav-links {
   flex: 2;
   padding: 0 2%;
   display: inline;
 }
-.nav-links ul{
+.nav-links ul {
   padding-top: 0cm;
   text-align: right;
 }
-.nav-links ul li{
+.nav-links ul li {
   list-style: none;
-  display:inline-block;
+  display: inline-block;
   padding: 20px 20px;
   position: relative;
 }
-.nav-links ul li a{
-  color:beige;
+.nav-links ul li a {
+  color: beige;
   text-decoration: none;
   font-size: 15px;
 }
-.nav-links ul li::after{
-  content: '';
+.nav-links ul li::after {
+  content: "";
   width: 0%;
   height: 2px;
-  background:#03a54c;
+  background: #03a54c;
   display: block;
   margin: auto;
   transition: 0.5s;
 }
-.nav-links ul li:hover::after{
-  width:100%;
+.nav-links ul li:hover::after {
+  width: 100%;
 }
-.text-box{
+.text-box {
   width: 90%;
-  color:beige;
+  color: beige;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
-.text-box h1{
+.text-box h1 {
   font-size: 50px;
 }
-.text-box p{
+.text-box p {
   margin: 10px 0 40px;
   font-size: 16px;
-  color:beige;
+  color: beige;
 }
-.hero-btn{
+.hero-btn {
   display: inline-block;
   text-decoration: none;
-  color:beige;
+  color: beige;
   border: 1px solid;
   padding: 12px 34px;
   background: transparent;
   position: relative;
-  cursor:pointer;
+  cursor: pointer;
   margin-top: 1%;
   border-radius: 1mm;
 }
-.hero-btn:hover{
+.hero-btn:hover {
   border: 1px solid #03a54c;
-  background:#03a54c;
+  background: #03a54c;
   transition: 1s;
 }
-nav .fa{
+nav .fa {
   display: none;
 }
-@media(max-width: 700px){
-  .text-box h1{
+@media (max-width: 700px) {
+  .text-box h1 {
     font-size: 20px;
   }
-  .text-box p{
+  .text-box p {
     font-size: 12px;
   }
-  .nav-links{
+  .nav-links {
     position: fixed;
-    background:#03a54c;
+    background: #03a54c;
     height: 100vh;
     width: 150px;
     top: 0;
@@ -125,7 +125,7 @@ nav .fa{
     transition: 1s;
     text-align: left;
   }
-  nav .fa{
+  nav .fa {
     display: block;
     color: #fff;
     margin: 5%;
@@ -134,18 +134,18 @@ nav .fa{
   }
 }
 /*-----------Training------*/
-.training{
+.training {
   width: 80%;
   text-align: center;
   padding-top: 80px;
   margin: auto;
 }
-.row{
+.row {
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
 }
-.training-col{
+.training-col {
   flex-basis: 31%;
   background: #6feca7;
   border-radius: 10px;
@@ -154,16 +154,16 @@ nav .fa{
   box-sizing: border-box;
   transition: 0.2s;
 }
-.training-col:hover{
-  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+.training-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
-@media(max-width: 700px){
-  .row{
+@media (max-width: 700px) {
+  .row {
     flex-direction: column;
   }
 }
 /*-------FSC----*/
-.FSC{
+.FSC {
   width: 100%;
   margin: auto;
   text-align: center;
@@ -171,7 +171,7 @@ nav .fa{
   padding-bottom: 50px;
   background-size: cover;
 }
-.FSC-col{
+.FSC-col {
   width: 80%;
   flex-basis: 32%;
   border-radius: 10px;
@@ -180,11 +180,11 @@ nav .fa{
   position: relative;
   overflow: hidden;
 }
-.FSC-col img{
+.FSC-col img {
   width: 100%;
   display: block;
 }
-.layer{
+.layer {
   background: transparent;
   height: 100%;
   width: 100%;
@@ -193,10 +193,10 @@ nav .fa{
   left: 0;
   transition: 0.5s;
 }
-.layer:hover{
+.layer:hover {
   background: rgba(103, 207, 158, 0.9);
 }
-.layer h3{
+.layer h3 {
   width: 100%;
   font-weight: 700;
   color: rgba(0, 0, 0, 0);
@@ -207,174 +207,176 @@ nav .fa{
   position: absolute;
   transition: 0.5s;
 }
-.layer:hover h3{
+.layer:hover h3 {
   color: #fff;
   bottom: 40%;
 }
-@media(max-width: 700px){
-  .layer:hover{
+@media (max-width: 700px) {
+  .layer:hover {
     padding-top: 10%;
   }
 }
 /*-------Department----*/
-.department{
+.department {
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 100px;
 }
-.department-col{
+.department-col {
   flex-basis: auto;
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
   transition: 0.2s;
 }
-.department-col:hover{
-  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+.department-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
-.department-col img{
+.department-col img {
   width: 100%;
   border-radius: 10px;
   display: block;
 }
 
-.department-col h3{
+.department-col h3 {
   font-weight: 400;
   margin-top: 16px;
   margin-bottom: 15px;
   text-align: center;
 }
 /*-------CTA----*/
-.cta{
+.cta {
   margin: 100px auto;
   width: 80%;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(../SeSC/books.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(/SeSC/books.jpg);
   background-position: center;
   border-radius: 10px;
   text-align: center;
   padding: 100px 0;
 }
-.cta h1{
+.cta h1 {
   color: #fff;
   margin-bottom: 10px;
   padding: 0;
 }
-@media(max-width: 700px){
-  .cta h1{
+@media (max-width: 700px) {
+  .cta h1 {
     font-size: 24px;
   }
 }
 /*-------footer----*/
-.footer{
+.footer {
   width: 100%;
   text-align: center;
   padding: 30px 0;
   background-color: rgba(15, 16, 15, 0.906);
 }
-.footer h4{
+.footer h4 {
   margin-bottom: 25px;
   margin-top: 20px;
   font-weight: 600;
-  color:beige;
+  color: beige;
 }
-.footer p{
-  color:beige;
+.footer p {
+  color: beige;
 }
-.icons .fa{
-  color:#03a54c;
+.icons .fa {
+  color: #03a54c;
   margin: 0 13px;
   cursor: pointer;
   padding: 18px 0;
 }
-.fa{
+.fa {
   color: #03a54c;
 }
 
 /*-----------About Us Page--------*/
-.sub-header{
+.sub-header {
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(../SeSC/green-building.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(/SeSC/green-building.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
   color: beige;
 }
-.sub-header h1{
+.sub-header h1 {
   margin-bottom: 200px;
 }
-.about-us{
+.about-us {
   width: 80%;
   margin: auto;
   padding-top: 80px;
   padding-bottom: 50px;
 }
-.about-col{
+.about-col {
   flex-basis: 48%;
   padding: 30px 2px;
 }
-.about-col img{
+.about-col img {
   width: 100%;
   border-radius: 2%;
   transition: 0.2s;
 }
-.about-col img:hover{
-  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+.about-col img:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
-.about-col h1{
+.about-col h1 {
   padding-top: 0;
 }
-.about-col p{
+.about-col p {
   padding: 15px 0 25px;
   font-weight: 100;
-  color:rgb(75, 75, 75);
+  color: rgb(75, 75, 75);
 }
-.green-btn{
+.green-btn {
   border: 1px solid #23854f;
   background: transparent;
-  color:#23854f;
+  color: #23854f;
 }
-.green-btn:hover{
+.green-btn:hover {
   color: #fff;
 }
 /*--------Blog--------*/
-.blog-content{
+.blog-content {
   width: 80%;
   margin: auto;
   padding: 60px 0;
 }
-.blog-left{
+.blog-left {
   flex-basis: 65%;
 }
-.blog-left img{
+.blog-left img {
   width: 100%;
   border-radius: 3%;
 }
-.blog-left h2{
+.blog-left h2 {
   color: #222;
   font-weight: 600;
   margin: 30px 0;
 }
-.blog-left p{
+.blog-left p {
   padding: 0;
   color: rgb(75, 75, 75);
 }
-.blog-right{
+.blog-right {
   flex-basis: 32%;
 }
-.blog-right h3{
-  background:#23854f;
+.blog-right h3 {
+  background: #23854f;
   color: #fff;
   padding: 7px 0;
   font-size: 16px;
   margin-bottom: 20px;
   transition: 0.2s;
 }
-.blog-right h3:hover{
-  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+.blog-right h3:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
-.blog-right div{
+.blog-right div {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -382,152 +384,101 @@ nav .fa{
   padding: 8px;
   box-sizing: border-box;
 }
-.comment-box{
-  border: 1px solid rgb(128,128,128);
+.comment-box {
+  border: 1px solid rgb(128, 128, 128);
   margin: 50px 0;
   padding: 10px 20px;
 }
-.comment-box h3{
+.comment-box h3 {
   text-align: left;
   font-weight: 600;
 }
-.comment-form input, .comment-form textarea{
+.comment-form input,
+.comment-form textarea {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
   box-sizing: border-box;
   border: none;
   outline: none;
-  background:rgb(241, 241, 241);
+  background: rgb(241, 241, 241);
 }
-.comment-form button{
+.comment-form button {
   margin: 15px 0;
 }
-@media(max-width:700px){
-  .sub-header h1{
+@media (max-width: 700px) {
+  .sub-header h1 {
     font-size: 40px;
   }
-  .header h1{
+  .header h1 {
     font-size: 40px;
   }
 }
 /*-------Contact us page----------*/
-.location{
+.location {
   width: 80%;
   margin: auto;
   padding: 80px 0;
 }
-.location iframe{
+.location iframe {
   width: 100%;
   border-radius: 3mm;
 }
-.contact-col{
+.contact-col {
   flex-basis: 48%;
   margin-bottom: 30px;
   padding-bottom: 5%;
 }
-.contact-col div{
+.contact-col div {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
   padding-left: 20%;
 }
-.contact-col ion-icon{
+.contact-col ion-icon {
   font-size: 28px;
   color: #03a54c;
   margin: 10px;
   margin-right: 30px;
 }
-.contact-col div p{
+.contact-col div p {
   padding: 0;
 }
-.contact-col div h5{
+.contact-col div h5 {
   font-size: 18px;
   margin-bottom: 5px;
   color: #555;
   font-weight: 600;
 }
-.contact-col input, .contact-col textarea{
+.contact-col input,
+.contact-col textarea {
   width: 80%;
   padding: 15px;
   margin-bottom: 17px;
   outline: none;
-  border: 1px solid rgb(128,128,128);
-  background:rgb(245, 245, 245);
+  border: 1px solid rgb(128, 128, 128);
+  background: rgb(245, 245, 245);
   box-sizing: border-box;
-
 }
-@media(max-width:700px){
-  .contact-col div h5{
+@media (max-width: 700px) {
+  .contact-col div h5 {
     font-size: 18px;
   }
-  .contact-col div{
+  .contact-col div {
     margin-left: -10%;
   }
-  .contact-col input, .contact-col textarea, .contact-col button{
+  .contact-col input,
+  .contact-col textarea,
+  .contact-col button {
     margin-left: 10%;
   }
 }
 /*-------Preloader----------*/
-#preloader{
-  background: rgb(255, 255, 255) url(../SeSC/preloader.gif) no-repeat center center;
+#preloader {
+  background: rgb(255, 255, 255) url(/SeSC/preloader.gif) no-repeat center
+    center;
   height: 100vh;
   width: 100%;
   position: fixed;
   z-index: 9999;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
