--- a/style/recruitment/style_form-recruit.css
+++ b/style/recruitment/style_form-recruit.css
@@ -116,7 +116,48 @@
 
 /*-------FORM----*/
 .form {
-  margin: 500px 0px;
+  padding: 100px 0px;
+}
+
+.form h2 {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.form .cauHoiChung {
+  margin: 50px 0px;
+}
+
+.form .cauHoiPhanBan .noti-error {
+  color: red;
+  display: none;
+}
+
+.form .cauHoiPhanBan .tab-dpt {
+  margin-top: 50px;
+  display: none;
+}
+
+.form .cauHoiPhanBan .tab-dpt .nav-link {
+  font-weight: 500;
+}
+
+.form .cauHoiPhanBan .tab-dpt .nav-link.active {
+  background-color: green;
+  color: white !important;
+  border: green;
+  font-weight: 500 !important;
+}
+
+.form .cauHoiPhanBan .tab-dpt .tab-content {
+  margin-top: 50px;
+}
+
+.form .cauHoiPhanBan .tab-dpt .nav-link.disabled {
+  background-color: gray !important;
+  color: gainsboro !important;
 }
 
 /*-------footer----*/
