--- a/style/recruitment/style_form-recruit.css
+++ b/style/recruitment/style_form-recruit.css
@@ -160,6 +160,28 @@
   color: gainsboro !important;
 }
 
+.form .cauHoiPhanBan .tab-dpt button.submit {
+  margin-top: 50px;
+  background-color: #03a54c !important;
+  transition: 0.3s;
+  border-radius: 50px;
+  padding: 10px 30px;
+}
+
+.form .cauHoiPhanBan .tab-dpt button.submit a {
+  text-decoration: none;
+  color: white;
+  transition: 0.3s;
+}
+
+.form .cauHoiPhanBan .tab-dpt button.submit:hover {
+  background-color: white !important;
+}
+
+.form .cauHoiPhanBan .tab-dpt button.submit:hover a {
+  color: #03a54c;
+}
+
 /*-------footer----*/
 .footer {
   width: 100%;
