--- a/style/recruitment/style_form-recruit.css
+++ b/style/recruitment/style_form-recruit.css
@@ -88,27 +88,6 @@ body {
   padding-top: 170px;
 }
 
-@media (max-width: 992px) {
-  .header .navbar-brand {
-    /* transform: translateX(260px); */
-    text-align: center;
-  }
-
-  .sticky .navbar-brand {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  .carousel h2 {
-    padding-top: 110px;
-  }
-
-  .carousel {
-    height: 60vh;
-  }
-}
-
 /* sticky effect */
 .sticky {
   position: fixed;
@@ -289,7 +268,51 @@ body {
   }
 }
 
-@media (max-width: 992px) {
+@media only screen and (max-width: 992px) and (max-height: 700px) {
+  .header .navbar-brand {
+    /* transform: translateX(260px); */
+    text-align: center;
+  }
+
+  .sticky .navbar-brand {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .carousel h2 {
+    padding-top: 110px;
+  }
+
+  .carousel {
+    height: 60vh;
+  }
+
+  .form h2 {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 992px) and (min-height: 700px) {
+  .header .navbar-brand {
+    /* transform: translateX(260px); */
+    text-align: center;
+  }
+
+  .sticky .navbar-brand {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .carousel h2 {
+    padding-top: 110px;
+  }
+
+  .carousel {
+    height: 40vh;
+  }
+
   .form h2 {
     font-size: 20px;
   }
