--- a/style/recruitment/style_form-recruit.css
+++ b/style/recruitment/style_form-recruit.css
@@ -96,9 +96,13 @@ body {
   width: 100%;
   color: white;
   background-color: green;
-  height: 15vh;
+  height: 20vh;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   z-index: 1;
+}
+
+.sticky .container {
+  height: 100%;
 }
 
 .sticky .navMenu ul li::after {
