--- a/style/recruitment/style_form-recruit.css
+++ b/style/recruitment/style_form-recruit.css
@@ -166,7 +166,7 @@ body {
 
 .form .cauHoiPhanBan .tab-dpt button.submit {
   margin-top: 50px;
-  background-color: #03a54c !important;
+  background-color: green !important;
   color: white !important;
   transition: 0.3s;
   border-radius: 50px;
@@ -175,7 +175,7 @@ body {
 
 .form .cauHoiPhanBan .tab-dpt button.submit:hover {
   background-color: white !important;
-  color: #03a54c !important;
+  color: green !important;
 }
 
 /*-------footer----*/
