--- a/style/home/style.css
+++ b/style/home/style.css
@@ -8,6 +8,7 @@
 
 body {
   position: relative;
+  /* overflow: hidden; */
 }
 
 h1 {
@@ -66,9 +67,9 @@ nav img {
   border-radius: 1mm;
 }
 .hero-btn:hover {
-  border: 1px solid #03a54c;
-  background: #03a54c;
-  transition: 1s;
+  border: 1px solid green;
+  background: green;
+  transition: 0.3s;
 }
 nav .fa {
   display: none;
@@ -82,13 +83,13 @@ nav .fa {
   }
   .nav-links {
     position: fixed;
-    background: #03a54c;
+    background: green;
     height: 100vh;
     width: 150px;
     top: 0;
     right: -200px;
     z-index: 2;
-    transition: 1s;
+    transition: 0.3s;
     text-align: left;
   }
   nav .fa {
@@ -118,7 +119,7 @@ nav .fa {
   margin-bottom: 5%;
   padding: 20px 12px;
   box-sizing: border-box;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 .training-col:hover {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -157,7 +158,7 @@ nav .fa {
   position: absolute;
   top: 0;
   left: 0;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 .layer:hover {
   background: rgba(103, 207, 158, 0.9);
@@ -171,7 +172,7 @@ nav .fa {
   left: 50%;
   transform: translateX(-50%);
   position: absolute;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 .layer:hover h3 {
   color: #fff;
@@ -194,7 +195,7 @@ nav .fa {
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 .department-col:hover {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -247,7 +248,7 @@ nav .fa {
 .about-col img {
   width: 100%;
   border-radius: 2%;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 .about-col img:hover {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -261,9 +262,10 @@ nav .fa {
   color: rgb(75, 75, 75);
 }
 .green-btn {
-  border: 1px solid #23854f;
+  border: 1px solid green;
   background: transparent;
-  color: #23854f;
+  color: green;
+  transition: all 0.3s;
 }
 .green-btn:hover {
   color: #fff;
@@ -299,7 +301,7 @@ nav .fa {
   padding: 7px 0;
   font-size: 16px;
   margin-bottom: 20px;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 .blog-right h3:hover {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
@@ -358,7 +360,7 @@ nav .fa {
 }
 .contact-col ion-icon {
   font-size: 28px;
-  color: #03a54c;
+  color: green;
   margin: 10px;
   margin-right: 30px;
 }
