--- a/style/recruitment/style_recruitment.css
+++ b/style/recruitment/style_recruitment.css
@@ -119,7 +119,7 @@ body {
 }
 
 .intro-quote .right {
-  padding: 0 50px;
+  /* padding: 0 50px; */
 }
 
 .intro-quote .right img {
@@ -166,6 +166,47 @@ body {
 
 .intro-quote .left button:hover a {
   color: green;
+}
+
+.intro-quote .swing {
+  animation: swing ease-in-out 1s infinite alternate;
+  transform-origin: center -20px;
+}
+
+.intro-quote .swing:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #999;
+  top: -10px;
+  left: 50%;
+  z-index: 0;
+  border-bottom: none;
+  border-right: none;
+  transform: rotate(45deg);
+}
+/* nail */
+.intro-quote .swing:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 10px;
+  height: 10px;
+  top: -18px;
+  left: 51%;
+  z-index: 10;
+  border-radius: 50% 50%;
+  background-color: green;
+}
+
+@keyframes swing {
+  0% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(-3deg);
+  }
 }
 
 /* ----- Number ----- */
