--- a/style/recruitment/style_recruitment.css
+++ b/style/recruitment/style_recruitment.css
@@ -504,6 +504,7 @@ body {
   width: fit-content;
   margin: 0 auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: 3px #03a54c ridge;
   display: none;
 }
 
