--- a/style/about/style_about.css
+++ b/style/about/style_about.css
@@ -219,7 +219,7 @@
   padding: 30px 30px 50px;
   margin: 0 15px 100px;
   position: relative;
-  height: 500px;
+  height: 600px;
 }
 .testimonial:before,
 .testimonial:after {
@@ -270,6 +270,7 @@
 .testimonial .pic img {
   /* max-width: 100%; */
   height: 100%;
+  transform: scale(1.2);
 }
 .testimonial .title {
   font-size: 15px;
@@ -284,11 +285,11 @@
   color: black;
 }
 .owl-theme {
-  height: 750px !important;
+  height: 850px !important;
 }
 
 .owl-theme .owl-wrapper-outer {
-  height: 700px !important;
+  height: 800px !important;
 }
 
 .owl-theme .owl-controls {
@@ -409,7 +410,14 @@
 }
 
 /* small screens horizental */
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 768px) {
+  .numbers .col-sm-6 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 768px) {
   .numbers .col-sm-6 {
     flex: 0 0 auto;
     width: 50%;
@@ -425,14 +433,14 @@
 
 @media only screen and (min-width: 650px) and (max-width: 770px) {
   .owl-theme {
-    height: 850px !important;
+    height: 1050px !important;
   }
 
   .owl-theme .owl-wrapper-outer {
-    height: 800px !important;
+    height: 1000px !important;
   }
 
   .testimonial {
-    height: 600px;
+    height: 800px;
   }
 }
