--- a/style/fsc/style_fsc.css
+++ b/style/fsc/style_fsc.css
@@ -101,6 +101,218 @@
   height: 100%;
 }
 
+/* ----- Number ----- */
+.numbers {
+  margin: 100px 0px;
+  background-image: url("/SeSC/[BCM]\ Background.png");
+  text-align: center;
+  padding: 60px 0px;
+  background-attachment: fixed;
+  background-position: right;
+}
+
+.numbers .number h3 {
+  font-size: 70px;
+  font-weight: 900;
+  color: #ccff33;
+}
+
+.numbers .number p {
+  font-size: 15px;
+  font-weight: 600;
+  color: #daf2da;
+}
+
+/*-------Coreteam----*/
+/* Heading */
+.heading-text {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.heading-text h2 {
+  font-size: 30px;
+  font-weight: 600;
+  color: green;
+}
+.heading-text h3 {
+  font-size: 50px;
+  font-weight: 800;
+}
+
+/* card */
+.coreteam .card {
+  /* width: 330px;
+  height: 416px; */
+  width: 250px;
+  height: 350px;
+  padding: 60px 0px;
+  margin: 0px auto;
+  background: #f2f3f7;
+  box-shadow: 0.6em 0.6em 1.2em #d2dce9, -0.5em -0.5em 1em #ffffff;
+  border-radius: 20px;
+}
+.coreteam .card .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.coreteam .card .content .imgBx {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  position: relative;
+  margin-bottom: 20px;
+  overflow: hidden;
+  transition: 0.3s;
+}
+.coreteam .card .content .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.coreteam .card .content .contentBx h4 {
+  color: #03a54c;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 1px;
+}
+.coreteam .card .content .contentBx h5 {
+  color: #6c758f;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+}
+.coreteam .card .content .sci {
+  margin-top: 20px;
+}
+.coreteam .card .content .sci a {
+  text-decoration: none;
+  color: #03a54c;
+  font-size: 20px;
+  margin: 10px;
+  transition: color 0.4s;
+}
+.coreteam .card .content .sci a:hover {
+  opacity: 0.5;
+}
+.coreteam .team-members .card {
+  margin-bottom: 20px;
+}
+
+/*-------testimonials----*/
+.testimonials {
+  margin: 100px 0px;
+}
+.testimonials .heading-text {
+  margin-bottom: 0px;
+}
+.testimonial {
+  /* height: 120vh; */
+  background: #03a54c;
+  text-align: center;
+  padding: 30px 30px 50px;
+  margin: 0 15px 100px;
+  position: relative;
+  height: 600px;
+}
+.testimonial:before,
+.testimonial:after {
+  content: "";
+  border-top: 40px solid #03a54c;
+  border-right: 125px solid transparent;
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+}
+.testimonial:after {
+  border-right: none;
+  border-left: 125px solid transparent;
+  left: auto;
+  right: 0;
+}
+.testimonial .icon {
+  display: inline-block;
+  font-size: 80px;
+  color: white;
+  margin-bottom: 20px;
+  opacity: 0.6;
+}
+.testimonial .description {
+  font-size: 16px;
+  color: white;
+  text-align: justify;
+  margin-bottom: 30px;
+  opacity: 0.9;
+  letter-spacing: -1px;
+}
+.testimonial .testimonial-content {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -130px;
+}
+.testimonial .pic {
+  display: inline-block;
+  border: 6px solid white;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 2px gainsboro;
+  overflow: hidden;
+  z-index: 1;
+  height: 130px;
+  position: relative;
+}
+.testimonial .pic img {
+  /* max-width: 100%; */
+  height: 100%;
+  transform: scale(1.2);
+}
+.testimonial .title {
+  font-size: 15px;
+  font-weight: bold;
+  color: black;
+  text-transform: capitalize;
+  margin: 0 0 5px 0;
+}
+.testimonials .testimonial .testimonial-content .post {
+  display: block;
+  font-size: 14px;
+  color: black;
+}
+.owl-theme {
+  height: 850px !important;
+}
+
+.owl-theme .owl-wrapper-outer {
+  height: 800px !important;
+}
+
+.owl-theme .owl-controls {
+  margin-top: 60px;
+}
+.owl-theme .owl-controls .owl-page span {
+  width: 32px;
+  height: 10px;
+  background: #fff;
+  border: 2px solid #03a54c;
+  margin: 5px;
+  opacity: 1;
+}
+.owl-theme .owl-controls .owl-page.active span,
+.owl-theme .owl-controls.clickable .owl-page:hover span {
+  background: #03a54c;
+  border-color: #fff;
+}
+.pic img {
+  width: 100px !important;
+  height: 50px;
+}
+
 /*-------footer----*/
 .footer {
   width: 100%;
@@ -194,5 +406,41 @@
 
   .form h2 {
     font-size: 20px;
+  }
+}
+
+/* small screens horizental */
+@media only screen and (min-width: 768px) {
+  .numbers .col-sm-6 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 768px) {
+  .numbers .col-sm-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 700px) {
+  .numbers .col-sm-6 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 650px) and (max-width: 770px) {
+  .owl-theme {
+    height: 1050px !important;
+  }
+
+  .owl-theme .owl-wrapper-outer {
+    height: 1000px !important;
+  }
+
+  .testimonial {
+    height: 800px;
   }
 }
